# TSC3

./: .dir-locals.el  .gitignore  .gitmodules  .lvimrc  AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL.md  README.md  Rakefile  build-and-run.sh  config.hpp.in  install-build-dependencies.sh
cmake/modules/: FindSFML.cmake
data/levels/: test_level.tsc3lvl
data/music/: hyper_1.xml
data/pixmaps/tilesets/: green.xml  green_3.xml
data/translations/: HowDoIMakeATranslation  Makefile  TSC3.pot  de.po  fi.po
docs/: contributing.md
docs/man/: tscproc.6
extras/: tsc-level-upgrade
pathie-include/: README  pathie
src/: application.cpp  application.hpp  audio.cpp  audio.hpp  configuration.cpp  configuration.hpp  font_store.cpp  font_store.hpp  gettext.h  ground.cpp  ground.hpp  gui.cpp  gui.hpp  i18n.cpp  i18n.hpp  level.cpp  level.hpp  main.cpp  pathmap.cpp  pathmap.hpp  settings.cpp  settings.hpp  texture_cache.cpp  texture_cache.hpp  timer.cpp  timer.hpp  util.cpp  util.hpp  xerces_helpers.cpp  xerces_helpers.hpp
src/scenes/: level_scene.cpp  level_scene.hpp  scene.cpp  scene.hpp  title_scene.cpp  title_scene.hpp
src/xml_loaders/: level_loader.cpp  level_loader.hpp
tscproc/: commandline.cpp  commandline.hpp  encoding.cpp  encoding.hpp  genmeta.cpp  genmeta.hpp  genpng.cpp  genpng.hpp  main.cpp  parser.cpp  parser.hpp  tscproc-gui.sh  tscproc.c  tscproc.cpp  util.cpp  util.hpp
